<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart City Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to San Jose Smart City App</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email Address</string>
    <string name="title_activity_register">Register</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_no">Phone No</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_place_detail">Info</string>
    <string name="app_title">Gimbal Sample App</string>
    <string name="action_enable">Enable</string>
    <string name="action_not_now">Not Now</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_tos">Terms of Use</string>
    <string name="action_place_monitoring">Place Monitoring</string>
    <string name="action_reset_app_instance_id">Reset App Instance ID</string>
    <string name="optin_top_text">Enable location to find</string>
    <string name="optin_bottom_text">nearby places.</string>
    <string name="btnIntend">Start Place Monitoring</string>
    <string name="title_activity_home_admin">MainActivity</string>
    <string name="manage_the_app">Smart City Guide Manager</string>
    <string name="view_messages">View Messages</string>
    <string name="manage_beacons">Manage Beacons</string>
    <string name="view_geo_fences">Manage Places</string>
    <string name="title_activity_beaconlist">MainActivity</string>
    <string name="title_activity_beacon_item">MainActivity</string>
    <string name="title_activity_geofenceslist">MainActivity</string>
    <string name="title_activity_geofences_item">MainActivity</string>
    <string name="title_activity_offer_list">MainActivity</string>
    <string name="scan_offer">Scan Offer</string>
    <string name="title_activity_offer_item">MainActivity</string>
    <string name="title_activity_beacon_info">MainActivity</string>
    <string name="title_activity_edit_beacon">MainActivity</string>
    <string name="edit_beacon">Edit Beacon</string>
    <string name="beacon_status">Beacon Status</string>
    <string name="beacon_battery">Battery Level</string>
    <string name="edit_beacon_name">Edit Beacon Name</string>
    <string name="geo_fence">Geo Fence</string>
    <string name="update_changes">Update Changes</string>
    <string name="deactivate_beacon">Deactivate</string>
    <string name="btnEvent">View Events</string>
    <string name="btnSubscribeEvent">Subscribe to Event</string>
    <string name="btnEventQuery">Email Admin</string>
    <string name="btnMail">Report Issues</string>
    <string name="compose_email">Send Mail</string>
    <string name="offertext">Congrats you got the offer !!!</string>
    <string name="btnAddPlace">Add Place</string>
 <string name="placeName">Place Title</string>
  <string name="placeDesc">Description</string>
   <string name="placeAddr">Address</string>
</resources>